2007-01-09  Chris Lumens  <clumens@redhat.com>

	* Merge in multiversion-branch (#189348).

2007-01-08  Chris Lumens  <clumens@redhat.com>

	multiversion-branch:

	* Merge from HEAD:  Updated translations.

2007-01-03  Chris Lumens  <clumens@redhat.com>

	multiversion-branch:

	* commands/base.py (BaseHandler.hasHandler):  Add a convenience method
	to see if there's a handler for a given command.

2006-12-22  Chris Lumens  <clumens@redhat.com>

	multiversion-branch:

	* pykickstart/commands/base.py (KickstartCommand.__init__):  Add a
	writePriority parameter to control the order commands get written out
	when __str__ methods are called.
	(BaseHandler.__str__):  Take writePriorities into account.
	(BaseHandler.registerHandler):  Insert command handlers into the
	_writePriority dict in the correct order - first by priority, then
	alphabetically within that priority.

	* pykickstart/commands/fc4.py:  Add new writePriority parameter.
	* pykickstart/commands/fc6.py:  Likewise.

2006-12-22  Chris Lumens  <clumens@redhat.com>

	multiversion-branch:

	* pykickstart/commands/fc6.py:  Added multipath support back in.

	* pykickstart/commands/base.py (BaseData):  Added a superclass for all
	those Kickstart*Data objects.
	* pykickstart/commands/fc4.py:  Use BaseData.
	* pykickstart/commands/fc6.py:  Likewise.

	* pykickstart/commands/base.py:  Clarify API for subclasses a little
	bit.  Make KickstartCommand.__str__ an abstract method.  Add
	DeprecatedCommand.__str__.

2006-12-20  Chris Lumens  <clumens@redhat.com>

	multiversion-branch:

	* pykickstart/commands/fc4.py (CommandReboot.__str__):  Fix output
	formatting.

	* Merge from HEAD:  Updated translations.

2006-12-20  Chris Lumens  <clumens@redhat.com>

	multiversion-branch:

	* pykickstart/__init__.py:  Clear this out.

	* pykickstart/errors.py:  Add __doc__ strings to all classes and
	public methods.
	* pykickstart/options.py:  Likewise.
	* pykickstart/version.py:  Likewise.
	* pykickstart/commands/base.py:  Likewise.
